# bookcase-rs

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yaml
bookcase/: Cargo.toml
bookcase/src/: allocator.rs  chapter.rs  error.rs  handle.rs  lib.rs  notebook.rs  page.rs  strategy.rs  test.rs
bookcase/src/allocator/: nightly_allocator.rs  stable_allocator.rs
bookcase_macros/: Cargo.toml
bookcase_macros/src/: lib.rs
src/: chapter.rs  handle.rs  lib.rs  main.rs  notebook.rs  page.rs  rust_internals.rs  strategy.rs
src/rust_internals/: raw_buffer.rs  raw_vec.rs
